# compiler

./: CMakeLists.txt  README  cminus.l  cminus.y  globals.h  main.c  util.c
doc/: CMINUS.md  task.md
test/: test1.cm  test2.cm  test3.cm  test4.cm  test5.cm
